[gd_scene load_steps=7 format=3 uid="uid://cgjcet4shswga"]

[ext_resource type="Script" uid="uid://cq510h8iw17y1" path="res://pause.gd" id="1_r8yp4"]
[ext_resource type="Shader" uid="uid://r2mauxs24ieh" path="res://shader.gdshader" id="2_m0klm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aicil"]
shader = ExtResource("2_m0klm")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_jn4bt"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.88]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r1fnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wen6a"]
_data = {
&"RESET": SubResource("Animation_r1fnm"),
&"blur": SubResource("Animation_jn4bt")
}

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8yp4")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_aicil")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 463.0
offset_top = 143.0
offset_right = 687.0
offset_bottom = 469.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="resumer" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Resumer"

[node name="recommencer" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Recommencer"

[node name="Quitter" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wen6a")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/resumer" to="." method="_on_resumer_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/recommencer" to="." method="_on_recommencer_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
